--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </div>
 
   <script>
-    const API_KEY = "YOUR_GEMINI_API_KEY"; // ⚠️ 실제 키 넣기 (보안주의!)
-    const MODEL = "gemini-1.5-flash"; // 또는 gemini-1.5-pro
+    const API_KEY = "AIzaSyDOcQBwMh8A3UDv6uCYT1-9mJSD1ZNEgvk"; // ⚠️ 실제 키 넣기 (보안주의!)
+    const MODEL = "gemini-2.5-flash"; // 또는 gemini-1.5-pro
 
     async function sendMessage() {
       const inputBox = document.getElementById("userInput");
